@@ -5,7 +5,7 @@ import os
 import tkinter
 import loadsettings
 import move
-
+ws = loadsettings.load()["walkspeed"]
 
 def apd(k):
     cmd = """
@@ -17,22 +17,21 @@ def apu(k):
         osascript -e  'tell application "System Events" to key up "{}"'
     """.format(k)
     os.system(cmd)
-    
-move.press(".")
-move.press(".")
-move.press(".")
-move.press("e")
-time.sleep(0.08)
-pag.keyDown("w")
-time.sleep(0.5)
+
+
+move.hold("d",5)
+move.hold("s",7)
+apd("a")
+time.sleep(12*28/ws)
+apu("a")
+move.apdown("w")
+time.sleep(8*28/ws)
 move.press("space")
-move.press("space")
-time.sleep(2.7)
-move.press(",")
-time.sleep(1.6)
-pag.keyUp("w")
-move.press("space")
-move.press(",")
-move.press(",")
+time.sleep(11*28/ws)
+move.apup("w")
+move.hold("d",1)
+move.hold("w",4)
+move.hold("d",3)
+move.hold("s",0.6)
 
     
