@@ -12,3 +12,5 @@ Changelog:
 - Fixed pinetree pathing
 - Code now loops
 - Added option to which direction to turn the camera before gathering and how many times. Directions include left, right and none
+- Added option to walk/reset back to hive after gathering
+- Added walking back to hive paths for stump and pine tree
